--- a/manifest.json
+++ b/manifest.json
@@ -23,10 +23,19 @@
   
     "content_scripts": [
       {
-        "matches": ["*://mail.google.com/*"],
+        "matches": ["*://mail.google.com/*", "*://app.hey.com/*"],
         "js": ["gptemail.js"]
       }
-    ]
+    ],
+
+    "commands": {
+      "_execute_browser_action": {
+        "suggested_key": {
+          "default": "Ctrl+Shift+E"
+        },
+        "description": "Send a 'toggle-feature' event"
+      }
+    }
   
   }
   
