--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
 
     "permissions": [
       "activeTab",
-      "storage"
+      "storage",
+      "clipboard-read"
     ],
 
     "browser_action": {
@@ -24,10 +25,6 @@
     "content_scripts": [
       {
         "matches": ["*://mail.google.com/*"],
-        "js": ["gptemail.js"]
-      },
-      {
-        "matches": ["*://app.hey.com/*"],
         "js": ["gptemail.js"]
       }
     ],
