--- a/manifest.json
+++ b/manifest.json
@@ -12,8 +12,7 @@
 
     "permissions": [
       "activeTab",
-      "storage",
-      "clipboard-read"
+      "storage"
     ],
 
     "browser_action": {
