--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
 
     "name": "GPTEmail",
     "manifest_version": 2,
-    "version": "1.0",
-    "description": "Uses LLMs to suggest responses to emails.",
+    "version": "1.0.0",
+    "description": "GPTemail allows you to capture information from your email client, and sent it to a large language model (like OpenAI's GPT3) to suggest a reply for you. Works on multiple e-mail clients, and allows you to choose between Cohere and OpenAI as the provider for the language model. Detailed usage instructions here: https://github.com/andersonbcdefg/gptemail",
   
     "icons": {
       "48": "icons/48.png",
