--- a/manifest.json
+++ b/manifest.json
@@ -38,7 +38,7 @@
     ],
 
     "commands": {
-      "_execute_browser_action": {
+      "_execute_action": {
         "suggested_key": {
           "default": "Ctrl+Shift+E"
         },
